# SchoolProjects

./: .gitignore  README.md
AnimalGuessing/Backend/: CMakeLists.txt  Main.cpp  NetworkHandler.cpp  NetworkHandler.hpp
AnimalGuessing/Frontend/animals_frontend/: package-lock.json  package.json
AnimalGuessing/Frontend/animals_frontend/src/: App.js  Button.js  FrontendAPI.js  FrontendHandler.js  InputField.js
ZadaniaAnticheat/: Main.cpp  ZadaniaAnticheat.sln  ZadaniaAnticheat.vcxproj  ZadaniaAnticheat.vcxproj.filters  anticheat.php
ZadaniaAnticheat/Files/: C30.txt  D10.txt  D10Plagiat.txt  D12.txt  D12Plagiat.txt  D13.txt  E10.txt  E11.txt  E12.txt  E13.txt  E13Plagiat.txt  E6.txt  E7.txt  E9.txt  E9_1.txt  E9_2.txt
